--- a/src/index.css
+++ b/src/index.css
@@ -125,9 +125,9 @@ header{
 
 .grid .sdgs img:hover{
     opacity: 100%;
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.0);
+    -ms-transform: scale(1.0);
+    transform: scale(1.0);
 }
 
 .sdg17{
@@ -193,4 +193,10 @@ header{
    .header .menuIcon{
     display: none;
    }
+   .grid .sdgs img:hover{
+    opacity: 100%;
+    -webkit-transform: scale(1.0);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
 }
