--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,7 @@ header{
 
 .grid .sdgs img{
     border-radius: 20px;
+    max-width: 80%;
     width: 400px;
     height: 400px;
     opacity: 50%;
