--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,8 @@ header{
 
 .grid .sdgs img{
     border-radius: 20px;
-    width: 80%;
+    width: 400px;
+    height: 400px;
     opacity: 50%;
     transition: 1s ease;
     
@@ -197,11 +198,5 @@ header{
     -webkit-transform: scale(1.0);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
-    }
 }
-
-@media (max-width: 48em){
-    .grid .sdgs img{
-        width: 80%;
-    }
 }
