--- a/src/index.css
+++ b/src/index.css
@@ -141,8 +141,7 @@ header{
 }
 .sdg17 img{
     border-radius: 20px;
-    width: 400px;
-    height: 400px;
+    width: 80%;
     margin: 30px;
 }
 
@@ -198,5 +197,11 @@ header{
     -webkit-transform: scale(1.0);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
+    }
 }
+
+@media (max-width: 48em){
+    .grid .sdgs img{
+        width: 400px;
+    }
 }
