--- a/src/index.css
+++ b/src/index.css
@@ -116,8 +116,7 @@ header{
 
 .grid .sdgs img{
     border-radius: 20px;
-    width: 400px;
-    height: 400px;
+    width: 80%;
     opacity: 50%;
     transition: 1s ease;
     
