--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -2,7 +2,7 @@
     color: white;
     position: absolute;
     background-color: #4f4f4f;
-    width: 100vw;
+    width: 100%;
     margin-top: 50px;
 }
 
