--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -1,18 +1,22 @@
+.container{
+    position: static;
+    background-color: transparent;
+    z-index: 0;
+}
+
 .grid {
     margin: auto;
     width: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 50px;
-    padding-top: 100px;
-    background-color: #2f2f2f;
+    gap: 50px;  
+    padding: 50px 0 50px 0;  
 }
 
 .grid img{
     border-radius: 20px;
     width: 90vw;
-    opacity: 50%;
     transition: 1s ease;
 }
 
