--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -38,3 +38,28 @@
         width: 400px;
     }
 }
+
+.circles .circle1{
+    z-index: -2;
+    position: absolute;
+    background-color: rgb(12, 121, 64);
+    width: 50vw;
+    height: 50vw;
+    border-radius: 25vw;
+    left: -25vw;
+    top: 500px;
+}
+
+.circles .circle2{
+    z-index: -2;
+    position: absolute;
+    background-color: rgb(217, 36, 13);
+    width: 30vw;
+    height: 60vw;
+    border-radius: 30vw 0 0 30vw;
+    right: 0;
+    top: 2600px;
+}
+body{
+    background-color: beige;
+}
