--- a/src/assets/styles/quiz.css
+++ b/src/assets/styles/quiz.css
@@ -35,7 +35,8 @@
     cursor: pointer;
 }
 
-.quizContainer button {
+.quizContainer button{
+    border-color: transparent;
     margin: auto;
     width: 250px;
     height: 65px;
@@ -45,14 +46,19 @@
     font-weight: 500; 
     border-radius: 8px;
     cursor: pointer;
+    -webkit-box-shadow: 0px 0px 19px -5px rgba(23,50,255,0.74); 
+    box-shadow: 0px 0px 19px -5px rgba(23,50,255,0.74);
 }
 
 .quizContainer input {
+    border-width: 2px;
+    border-style: groove;
     margin: auto;
     width: 250px;
     height: 65px;
-    background-color: #0470fe;
-    color: white;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    text-align: center;
     font-size: 25px;
     font-weight: 500; 
     border-radius: 8px;
